FLUID-5314: Fixed overlapping link text - Fixed problem when using emphasize links, the feedback link would overlap the line of text above. - Fixed problem where the dimensions of the "hidden" container was not scaling to the size of the star when emphasize links as enabled.

--- a/src/components/overviewPanel/css/OverviewPanel.css
+++ b/src/components/overviewPanel/css/OverviewPanel.css
@@ -77,14 +77,14 @@
      * positions of fl-overviewPanel-contents are adjusted.
      */
     top: 6.5em;     /* Change this if needed - offset the height of fl-overviewPanel-title + 1em (for line-height compensation).  */
-    bottom: 10.5em; /* Change this if needed - offset the height of fl-overviewPanel-footer. */
+    bottom: 13.5em; /* Change this if needed - offset the height of fl-overviewPanel-footer. */
     padding: 1.5em;
     position: absolute;
     overflow: auto;
 }
 
 .fl-overviewPanel .fl-overviewPanel-footer {
-    height: 10.5em;
+    height: 13.5em;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -115,7 +115,7 @@
 .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
 .fl-overviewPanel a:active,
 .fl-overviewPanel a:focus {
-    outline: 0.2em solid #27A9E1;
+    outline: 0.3em solid #27A9E1;
 }
 
 .fl-overviewPanel-group:after { /* clearfix (aka. group) */
@@ -172,11 +172,9 @@
 }
 
 .fl-overviewPanel-container.fl-overviewPanel-hidden{
-    /* make the hidden container the same size as the star button. This way the star button 
-     * appears properly and the hidden container doesn't block interaction with content below it.*/
-    width: 2.9em;
-    height: 5.3em; 
-    min-height: 5.3em;
+    /* Make this container essentially hidden. Some dimensions need to be given to avoid a problem with rendering on Safari. */
+    width: 0.01em; 
+    height: 0.01em; 
     
     transition: all 0.2s linear; /* This transition creates the desired sliding effect. */ 
 }
@@ -187,6 +185,7 @@
 .fl-overviewPanel .fl-overviewPanel-title h1 {
     display: inline-block;
     padding: 0.5em;
+    margin-left: 0.2em;
 }
 
 .fl-overviewPanel .fl-overviewPanel-title a {
@@ -273,6 +272,10 @@
     content: "\e603";
 }
 
+.fl-overviewPanel .fl-overviewPanel-feedbackText {
+    display:block;
+}
+
 .fl-overviewPanel .fl-overviewPanel-feedback-link a{
     color: #FFCC00;
 }
@@ -333,7 +336,7 @@
 .fl-theme-bw .fl-overviewPanel *:focus,
 .fl-theme-bw .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
 .fl-theme-bw .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus  {
-    outline: 0.2em solid #000;
+    outline: 0.3em solid #000;
 }
 
 .fl-theme-bw .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
@@ -373,7 +376,7 @@
 .fl-theme-wb .fl-overviewPanel *:focus,
 .fl-theme-wb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
 .fl-theme-wb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus  {
-    outline: 0.2em solid #fff;
+    outline: 0.3em solid #fff;
 }
 
 .fl-theme-wb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
@@ -414,7 +417,7 @@
 .fl-theme-lgdg .fl-overviewPanel *:focus,
 .fl-theme-lgdg .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
 .fl-theme-lgdg .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus {
-    outline: 0.2em solid #bdbdbb;
+    outline: 0.3em solid #bdbdbb;
 }
 
 .fl-theme-lgdg .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
@@ -454,7 +457,7 @@
 .fl-theme-yb .fl-overviewPanel *:focus,
 .fl-theme-yb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
 .fl-theme-yb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus {
-     outline: 0.2em solid #FFFF00; 
+     outline: 0.3em solid #FFFF00; 
  }
  
 .fl-theme-yb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
@@ -500,7 +503,7 @@
 .fl-theme-by .fl-overviewPanel *:focus,
 .fl-theme-by .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
 .fl-theme-by .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus {
-    outline: 0.2em solid #000;
+    outline: 0.3em solid #000;
 }
 
 .fl-theme-by .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
